tests/baselines/reference/invalidUnicodeEscapeSequance2.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance2.ts (2 errors) ====
    var arg\uxxxx
           ~
!!! error TS1001: Unexpected character "\".
           ~
!!! error TS1005: ',' expected.